# Choros

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: agent_ls.rs  agent_settings.rs  agent_settings_tui.rs  app.rs  choros.rs  cli.rs  git.rs  json_diff.rs  main.rs  registry.rs  workspace.rs
src/cache/: js.rs  mod.rs  rust.rs  store.rs  toolchain.rs
src/skills/: choros-archive.md  land-the-plane.md
src/ui/: mod.rs
